v0.3.0rc - XXXX
  - Transitions: added FadeBLTransition, FadeUpTransition, FadeDownTransition
  - Transitions: reanamed CurtainTransition to FadeTRTransition
  - Actions: Added FadeOutBLTiles, FadeOutUpTiles, FadeDownTiles
  - Actions: renamed FadeOutTiles to FadeOutTRTiles

v0.3.0beta0 - May 5th, 2008
  - Actions: actions are defined in the actions/ folder
  - Actions: Goto renamed to MoveTo and Move renamed to MoveBy
     Scale renamed to ScaleBy. Added ScaleTo
     Rotate renamed to RotateBy. Added RotateTo
  - Actions: Jump renamed to JumpBy. Added JumpTo.
    Changed the JumpBy/To API. JumpBy( (x,y), height, number_of_jumps, duration)
  - Actions: Added IntervalAction decorators:
     Accelerate, AccelDeccel, Speed, ReverseTime
  - Actions: time can be modified in a whole sequence. eg: Accelerate( sequence )
  - Actions: Added a new base class: InstantAction 
  - Actions: every cocosnode support actions. eg: sprites, layers, scenes, etc.
  - Actions: Added grid (mesh distortion) effects:
     Liquid, Waves, Shaky3D, ShakyTiles3D, ShuffleTiles, QuadMoveBy,
     MoveCornerUp, MoveCornerDown, SkewVertical, SkewHorizontal,
     FlipX, FlipY, Flip, CornerSwap, ShatteredTiles3D,
     FadeOutTiles, Waves3D, FlipX3D, FlipY3D, Lens3D,
     JumpTiles3D, WavesTiles3D, Twirl
  - Actions: Added Waves decorators: AccelAmplitude, DeccelAmplitude,
       AccelDeccelAmplitude.
  - Actions: Added camera effects: CameraOrbit
  - Cocos: Renamed project to cocos2d
  - Director: Added DefaultHandler:
     ESCAPE: director.pop
     MOD_ACCEL + f: Toggles Fullscreen
     MOD_ACCEL + p: Toggles Pause
     MOD_ACCEL + w: Toggles wireframe mode
     MOD_ACCEL + s: Takes a screenshot of the current window
     MOD_ACCEL + x: Toggles FPS
     MOD_ACCEL + i: Toggles the python interpreter
  - Director: alpha blending enabled by default. 
    use director.set_alpha_bleding(True|False) to change.
  - Documentation: using pyglet's documentation tools